--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   rename_app: ^1.6.5
   flutter_svg: ^2.2.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
